src/test/compile-fail/match-vec-mismatch-2.rs
fn main() {
    match () {
        [()] => { } //~ ERROR mismatched types: expected `()`, found a vector pattern
    }
}
